--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.0.3",
-    "pg": "^8.13.1",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "react-responsive-carousel": "^3.2.23",
-    "sweetalert2": "^11.14.5"
-  },
+  "next": "15.0.3",
+  "pg": "^8.13.1",
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0",
+  "react-responsive-carousel": "^3.2.23",
+  "sweetalert2": "^11.14.5"
+}
+,
   "devDependencies": {
     "@types/node": "^20",
     "@types/pg": "^8.11.10",
